| Bug #59017 | Auth plugin socket_peercred fails to load in 5.5.8 | ||
|---|---|---|---|
| Submitted: | 17 Dec 2010 21:53 | Modified: | 14 Mar 2011 15:36 |
| Reporter: | Matthew Montgomery | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Pluggable Authentication | Severity: | S3 (Non-critical) |
| Version: | 5.5.8 | OS: | Any |
| Assigned to: | Georgi Kodinov | CPU Architecture: | Any |
[17 Dec 2010 21:53]
Matthew Montgomery
[11 Jan 2011 14:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/128436 3234 Georgi Kodinov 2011-01-11 Bug #59017: Auth plugin socket_peercred fails to load in 5.5.8 Due to how the server checks for option names the name of the plugin "socket_peercred" collides with the existing server side option "socket". Renamed the plugin from "socket_peercred" to "auth_socket" to avoid the name clash.
[10 Feb 2011 9:25]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/130980 3320 Georgi Kodinov 2011-01-11 Bug #59017: Auth plugin socket_peercred fails to load in 5.5.8 Due to how the server checks for option names the name of the plugin "socket_peercred" collides with the existing server side option "socket". Renamed the plugin from "socket_peercred" to "auth_socket" to avoid the name clash.
[10 Feb 2011 9:25]
Bugs System
Pushed into mysql-5.5 5.5.10 (revid:georgi.kodinov@oracle.com-20110111145314-uz4ib7uq120rr2vp) (version source revid:georgi.kodinov@oracle.com-20110111145314-uz4ib7uq120rr2vp) (merge vers: 5.5.10) (pib:24)
[10 Feb 2011 9:27]
Bugs System
Pushed into mysql-trunk 5.6.2 (revid:georgi.kodinov@oracle.com-20110210092614-zrt9pix3u3neykzx) (version source revid:georgi.kodinov@oracle.com-20110210092614-zrt9pix3u3neykzx) (merge vers: 5.6.2) (pib:24)
[14 Mar 2011 15:36]
Paul DuBois
Noted in 5.5.10, 5.6.2 changelogs. MySQL distributions now include auth_socket, a server-side authentication plugin that authenticates clients that connect from the local host through the Unix socket file. The plugin uses the SO_PEERCRED socket option to obtain information about the user running the client program (and thus can be built only on systems that support this option. For a connection to succeed, the plugin requires a match between the login name of the connecting client user and the MySQL user name presented by the client program. CHANGESET - http://lists.mysql.com/commits/130980
