Bug #59017: Auth plugin socket_peercred fails to load in 5.5.8

Due to how the server checks for option names the name of the
plugin "socket_peercred" collides with the existing server side 
option "socket".

Renamed the plugin from "socket_peercred" to "auth_socket" to
avoid the name clash.